secondfile/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Additional_information__c</fullName>
        <label>Bus Dev Activity Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Same_as_Company_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the Billing Address is the same as Company Address check this box</inlineHelpText>
        <label>Same as Company Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip_Code__c</fullName>
        <label>Billing Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Dev_Comment__c</fullName>
        <description>New Feild Dec Release</description>
        <label>Bus Dev Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Development_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Development Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns__c</fullName>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_did_you_learn_about_AT_T_Partner_Exc__c</fullName>
        <label>How did you learn about Partner Exchange</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Another Solution Provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRA_Executed_Date__c</fullName>
        <label>MRA Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MRA_Number__c</fullName>
        <description>MRA Number assigned to an Account</description>
        <displayFormat>MA{0000000}UA</displayFormat>
        <label>MRA Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Other_Method__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>